tests/invalid/while.ar
fn main() {
    let i = 1;
    while i != 0 {
        0
    }
}
